--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v2
-  
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.16.5 ' # The Go version to download (if necessary) and use.
+      - run: go version
       - run: echo "Oi"
